--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ package:
 source:
   # url: https://github.com/mackyle/xar/archive/xar-{{ version }}.tar.gz
   url: https://opensource.apple.com/tarballs/xar/xar-{{ subversion }}.tar.gz
-  sha256: c632b996b2b12fc0f90a2704701788029141ca40552cf5b8b38c23ae72de15ca
+  sha256: abfa47d6ce20b5f041bb51a9bbc19ffb50270c8f0e9b3f7dbdaafb482ede8ece
   patches:
     # WARNING: order matters!!!
     # mashup of patches and scripts from:
@@ -32,6 +32,7 @@ source:
     - patches/0008-patch-tpoechtrager.patch
 
 build:
+  number: 1
   skip: True  # [win]
   ignore_run_exports:
     - libxml2   # [osx]
@@ -56,8 +57,10 @@ requirements:
     - bzip2
     - zlib
     - xz
-    - openssl
+    - openssl 3.0.8
     - icu       # [osx]
+  run:
+    - openssl 3.*
 
 about:
   home: https://opensource.apple.com/source/xar/
